--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple bank exercise for Web3 dev learning program 2022",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test \"Error: no test specified\" && exit 1"
   },
   "author": "chukky_",
   "license": "ISC"
