--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "truffle test \"Error: no test specified\" && exit 1"
   },
   "author": "chukky_",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "truffle": "^5.5.22"
+  }
 }
